@@ -1,4 +1,7 @@
 2005-09-11 Francois Proulx <francois.proulx@gmail.com>
+	* Added dependency check for Phlickr
+	
+2005-09-11 Francois Proulx <francois.proulx@gmail.com>
 	* Fixed Flickr support
 	* Now using PEAR version of Phlickr
 	* Download the latest package and install like this : pear install PhlickrXYZ.tar.gz
